@@ -19,6 +19,7 @@ Performance improvements:
 	* reduce the memory consumption during the spreadsheet export to Sqlite
 	* reduce the memory consumption when importing from a database table into the spreadsheet
 	* faster import of files with a big number of columns
+	* faster creation of a big number of columns in the spreadsheet
 
 Bug fixes:
 	* [worksheet]
